add-func-creatCoinsBox

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     </section>
   </article>
 
-  <main>
-    <h1></h1>
+  <main id="main">
   </main>  
   <script type="module" src="./src/main.js"></script>
 </body>
