ajustes-html-css

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <label for="coin">
         <input type="text" name="coin" id="coin" placeholder="Ex: BRL, USD, EUR">
       </label>
-      <button id="pesquisar"> Pesquisar </button> <br> <br> 
-      <b id="referencia">Valor referente: <span id="referenciaspan"></span></b>
+      <button id="pesquisar"> Pesquisar </button>
+      <p id="referencia">Valor referente: <span id="referenciaspan"></span></p>
     </section>
   </article>
 
