--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
       <p>Digite sua moeda:</p>
     </section>
-    <section>
+    <section id="searchBox">
       <label for="coin">
         <input type="text" name="coin" id="coin" placeholder="Ex: BRL, USD, EUR">
       </label>
